# lyrebird

./: .gitignore  .wave-start  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  POLISH_TARGETS.md  README.md  appcast.xml  deny.toml  rust-toolchain.toml  typos.toml
.claude/agents/: adversarial-reviewer.md  area-auditor.md  area-fixer.md  problem-triager.md
.claude/commands/: desktop-fix.md  desktop-loop.md  desktop-review.md  desktop-sweep.md
.claude/workflows/: drive-lyrebird-desktop.js
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: AlbumCard.tsx  AlbumDetailScreen.tsx  ArtistCard.tsx  ArtistDetailScreen.tsx  ArtistRadioTile.tsx  Artwork.tsx  Banner.tsx  Button.tsx  Chip.tsx  CommandPalette.tsx  DecadeTile.tsx  EmptyState.tsx  EqualizerIcon.tsx  FormatBadge.tsx  GenreTile.tsx  HomeQuickTile.tsx  HomeScreen.tsx  Icon.tsx  IconButton.tsx  LibraryFilter.tsx  LibraryScreen.tsx  LyrebirdRoot.tsx  LyricRow.tsx  Lyrics.tsx  MiniPlayer.tsx  NowPlaying.tsx  PlayerBar.tsx  PlaylistCard.tsx  QueueInspector.tsx  RadioStationTile.tsx  RecentlyPlayedTile.tsx  SectionHeader.tsx  Shelf.tsx  Sidebar.tsx  SidebarBrand.tsx  SidebarItem.tsx  SidebarPlaylistRow.tsx  SidebarSection.tsx  SidebarServerFooter.tsx  Toast.tsx  (+3 more)
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  coverage.yml  e2e.yml  macos-release.yml  security.yml
Scripts/: privacy-grep.sh  rebase-tests-rs.sh  smoke-test.sh
core/src/: client.rs  downloads.rs  error.rs  lib.rs  library_cache.rs  models.rs  player.rs  query.rs  scrobble.rs  storage.rs  tests.rs
core/src/migrations/: 001_initial.sql  002_downloads.sql  003_library_cache_sort.sql
core/src/tests/: client.rs  discovery.rs  downloads.rs  errors_enums.rs  favorites.rs  library.rs  library_cache.rs  mod.rs  persistence.rs  playback.rs  playlists.rs  scrobble.rs  search.rs  session_auth.rs
core/tests/: e2e_live.rs
design/lyrebird-ds/: package-lock.json  package.json  tsconfig.json
design/lyrebird-ds/fonts/: fonts.css
design/lyrebird-ds/src/: index.ts
docs/: GITHUB-SECRETS.md
docs/audit/: AUDIT-2.0.md  CAMPAIGN-2.0.md
examples/cli/src/: main.rs
linux/: Cargo.toml
macos/: DISTRIBUTION.md  Package.resolved  Package.swift
macos/Resources/: Info.plist  Lyrebird.entitlements
macos/Scripts/: a11y-audit.sh  build-core.sh  generate-appcast.sh  make-bundle.sh  make-dmg.sh  make-iconset.sh  notarize.sh  sign.sh
macos/Sources/Jellify/: AppDelegate.swift  AppModel.swift  Capabilities.swift  JellifyApp.swift  JellifyErrorPresenter.swift
macos/Sources/JellifyAudio/: AudioEngine.swift  MediaSession.swift
macos/Sources/Lyrebird/: AppDelegate.swift  AppModel+AlbumDetail.swift  AppModel+CommandPalette.swift  AppModel+Crossfade.swift  AppModel+DebugPanel.swift  AppModel+Downloads.swift  AppModel+Equalizer.swift  AppModel+Favorites.swift  AppModel+Genre.swift  AppModel+Home.swift  AppModel+ImageURLs.swift  AppModel+InstantMix.swift  AppModel+ItemActions.swift  AppModel+ItemsQuery.swift  AppModel+Library.swift  AppModel+LibraryCache.swift  AppModel+Navigation.swift  AppModel+NowPlaying.swift  AppModel+Playback.swift  AppModel+PlaybackControls.swift  AppModel+PlaylistTracks.swift  AppModel+Playlists.swift  AppModel+Queue.swift  AppModel+Resolvers.swift  AppModel+Search.swift  AppModel+Session.swift  AppModel+Shortcuts.swift  AppModel+Shutdown.swift  AppModel+Window.swift  AppModel.swift  BetaChannelPreference.swift  Capabilities.swift  CountStrings.swift  FocusRegion.swift  LyrebirdApp.swift  LyrebirdErrorPresenter.swift  NetworkMonitor.swift  ServerReachability.swift  Updater.swift
macos/Sources/LyrebirdAudio/: AudioEngine+DSP.swift  AudioEngine.swift  AudioOutputDevices.swift  CrossfadeSettings.swift  DSPTrackStreamer.swift  EngineDSPPipeline.swift  EqualizerSettings.swift  MediaSession.swift  ReplayGain.swift
macos/Sources/LyrebirdCore/: LyrebirdCore.swift
macos/Sources/SmokeTest/: main.swift
macos/Tests/LyrebirdTests/: AboutInfoTests.swift  AccessibleThemeTests.swift  AirPlayRoutePickerTests.swift  AlbumDetailViewAuditTests.swift  AlbumOverviewTests.swift  AlphabetScrollIndexTests.swift  AmbientPaletteTests.swift  AppShortcutsTests.swift  ArtistDetailTransportTests.swift  ArtistsYouLoveTests.swift  ArtworkAccessibilityTests.swift  AudioEnginePreloadTests.swift  AudioEngineRecoveryTests.swift  AudioOutputDevicesTests.swift  AudioQualityPreferencesTests.swift  AutoplayWhenQueueEndsTests.swift  BetaChannelTests.swift  BreadcrumbNameResolutionTests.swift  BrowseGenresRankingTests.swift  CapabilityGatedControlsTests.swift  CommandPaletteSearchTests.swift  CoreDataLocationTests.swift  CountStringsTests.swift  CrashReporterDecisionTests.swift  CrossfadeSettingsTests.swift  DSPPausedStreamRecoveryTests.swift  DebugPanelTests.swift  DecadeBrowseTests.swift  DiagnosticBundleTests.swift  DiscoverSongRadioRouteTests.swift  DockTileTests.swift  DownloadsTests.swift  EngineDSPPipelineTests.swift  EqualizerSettingsTests.swift  FeatureTourTests.swift  (+62 more)
(+212 files in other folders)
