[workspace]
resolver = "2"
members = [
    "core",
    "examples/cli",
    "linux",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.90"
license = "GPL-3.0-only"
repository = "https://github.com/skalthoff/lyrebird-desktop"

[workspace.dependencies]
# Runtime
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# HTTP + JSON
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }
# keyring's default backend is the mock (no persistence). Each platform enables
# the appropriate native store via a cfg-gated override in `core/Cargo.toml`.
keyring = "3"

# (Audio playback happens on the platform side via AVFoundation/MediaPlayer/GStreamer.
#  The Rust core only manages stream URLs + queue state.)

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

# FFI
uniffi = { version = "0.29", features = ["cli"] }

# Testing
wiremock = "0.6"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
# UniFFI's generated bindings wrap every FFI call in `catch_unwind` and
# surface a Rust panic as a thrown `InternalError` on the host side (#445).
# That contract only holds while panics unwind — with `panic = "abort"` a
# single core panic kills the whole host app. "unwind" is Cargo's default,
# but pin it explicitly so a future profile tweak can't silently break the
# FFI panic contract. See CONTRIBUTING.md "Panics and error handling".
panic = "unwind"
